// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (--config-emoji) shows the correct emojis 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌟 Set in the \`all\` configuration.\\
🔥 Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌟 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌟 🔥 | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (--config-emoji) shows the correct emojis 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌟 \`all\`, 🔥 \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--config-emoji) shows the correct emojis 3`] = `
"# test/no-bar

💼 This rule is enabled in the following configs: 🌟 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--config-emoji) shows the correct emojis 4`] = `
"# test/no-baz

📝 Description of no-baz.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--config-emoji) uses the badge markdown as provided 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
![fun config badge](https://img.shields.io/badge/-fun-blue.svg) Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼                                                                 | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :----------------------------------------------------------------- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨                                                              | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |                                                                    |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ![fun config badge](https://img.shields.io/badge/-fun-blue.svg) | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (--config-emoji) uses the badge markdown as provided 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ![fun config badge](https://img.shields.io/badge/-fun-blue.svg) \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--config-emoji) uses the default emoji when no configEmoji option is provided 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (--config-emoji) uses the default emoji when no configEmoji option is provided 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;
